@@ -35,6 +35,8 @@ Version 2.0-dev (CVS)
   passed in feature instead of through the return value of the method as
   was the case with the old SetFeature() method in MITAB 1.x.
 
+- Removed incomplete patch for affine params support in mitab. (bug 1155)
+
 - Added the use of OGRGeometryFactory::organizePolygons for mif features
 
 - Fixed Win32 Compile Warnings (GDAL bug #2930)
@@ -992,5 +994,5 @@ Version 0.1 - (1999-12-04)
 
 
 ------------
-$Id: HISTORY.TXT,v 1.250 2010-09-07 16:08:39 aboudreault Exp $
+$Id: HISTORY.TXT,v 1.251 2010-09-07 16:48:07 aboudreault Exp $
 ------------
